# knot-resolver

modules/: meson.build
modules/whalebone/: meson.build  whalebone.c
